k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chiman-project
  labels:
    app: chiman-project
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chiman-project
